Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32347

qmlls: don't ignore the minimum qt version checkbox

XMLWordPrintable

    • f1945661d (16.0)

      QtC currently ignores the checkbox value at
      Preferences -> Language Client -> QML Language Server > Allow versions below Qt 6.8 when selecting a version of qmlls.

        For Gerrit Dashboard: QTCREATORBUG-32347
        # Subject Branch Project Status CR V

            sami.shalayel Sami Shalayel
            sami.shalayel Sami Shalayel
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes