qmlls: don't ignore the minimum qt version setting

Amends a737828d7d6b385ef09355e0c56b4ff9620b4f0a that didn't provide a
replacement for the qmlls version check for when the "Allow versions
below Qt 6.8" checkbox is unchecked.

Make the qmllsclientsetting invalid on projects where it would select a
qmlls version under 6.8, if that setting is enabled.

Fixes: QTCREATORBUG-32347
Task-number: QTCREATORBUG-31897
Change-Id: I153d42dc6ba971b25912084308e0bce22ca092fe
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>