src/plugins/qmljseditor/qmllsclientsettings.cpp
@@ -115,17 +115,22 @@ static std::pair<FilePath, QVersionNumber> evaluateLatestQmlls()
     return std::make_pair(latestQmlls, latestVersion);
 }
 
+static std::pair<FilePath, QVersionNumber> evaluateQmlls(const QtVersion *qtVersion)
+{
+    return qmllsSettings()->m_useLatestQmlls
+               ? evaluateLatestQmlls()
+               : std::make_pair(
+                     QmlJS::ModelManagerInterface::qmllsForBinPath(
+                         qtVersion->hostBinPath(), qtVersion->qtVersion()),
+                     qtVersion->qtVersion());
+}
+
 static CommandLine commandLineForQmlls(Project *project)
 {
     const auto *qtVersion = qtVersionFromProject(project);
     QTC_ASSERT(qtVersion, return {});
 
-    auto [executable, version] = qmllsSettings()->m_useLatestQmlls
-                                     ? evaluateLatestQmlls()
-                                     : std::make_pair(
-                                           QmlJS::ModelManagerInterface::qmllsForBinPath(
-                                               qtVersion->hostBinPath(), qtVersion->qtVersion()),
-                                           qtVersion->qtVersion());
+    auto [executable, version] = evaluateQmlls(qtVersion);
 
     CommandLine result{executable, {}};
 
@@ -160,13 +165,18 @@ bool QmllsClientSettings::isValidOnProject(ProjectExplorer::Project *project) co
     if (!project || !QtVersionManager::isLoaded())
         return false;
 
-    if (!qtVersionFromProject(project)) {
-        Core::MessageManager::writeSilently(
-            Tr::tr("Current kit does not have a valid Qt version, disabling QML Language Server..."));
+    const QtVersion *qtVersion = qtVersionFromProject(project);
+    if (!qtVersion) {
+        Core::MessageManager::writeSilently(Tr::tr(
+            "Current kit does not have a valid Qt version, disabling QML Language Server..."));
         return false;
     }
 
-    if (m_useLatestQmlls && evaluateLatestQmlls().first.isEmpty())
+    const auto &[filePath, version] = evaluateQmlls(qtVersion);
+
+    if (filePath.isEmpty())
+        return false;
+    if (!m_ignoreMinimumQmllsVersion && version < QmllsClientSettings::mininumQmllsVersion)
         return false;
 
     return true;
